<resources xmlns:xliff="http://schemas.android.com/apk/res-auto">
    <string name="app_name">Sunshine</string>
    <string name="action_view_location">Map</string>
    <string name="action_settings">Settings</string>
    <string name="action_share">Share</string>

    <string name="refresh_menu">Refresh</string>
    <string name="title_activity_detail_antivity">DetailAntivity</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_location_title">Location</string>
    <string name="pref_location_default" translatable="false">M5E 1E5</string>
    <string name="pref_location_key" translatable="false">location</string>

    <string name="pref_unit_title">Pick Your Units</string>
    <string name="pref_unit_metric" translatable="false">metric</string> <!-- metric -->
    <string name="pref_unit_imperial" translatable="false">imperial</string> <!-- metric -->
    <string name="pref_unit_key" translatable="false">unit</string>
    <string-array name="pref_unit_titles">
        <item>Metric</item>
        <item>Imperial</item>
    </string-array>
    <string-array name="pref_unit_values">
        <item>@string/pref_unit_metric</item>
        <item>@string/pref_unit_imperial</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

    <!-- Fragment Tag -->
    <string name="main_fragment_tag" translatable="false">MFTAG</string>

    <!-- Weather Display String -->
    <string name="today">Today</string>
    <string name="tomorrow">Tommorrow</string>
    <string name="format_full_friendly_date"><xliff:g id="day">%1$s</xliff:g>, <xliff:g id="date">%2$s</xliff:g></string>
    <string name="format_temperature"><xliff:g id="temprature">%1.0f</xliff:g>&#176;</string>
    <string name="format_humidity">Humidity: <xliff:g id="humidity">%1.0f</xliff:g>%%</string>
    <string name="format_wind_metric">Wind: <xliff:g id="speed">%1.0f</xliff:g> km/h <xliff:g id="direction">%2$s</xliff:g></string>
    <string name="format_wind_imperial">Wind: <xliff:g id="speed">%1.0f</xliff:g> mph <xliff:g id="direction">%2$s</xliff:g></string>
    <string name="format_pressure">Pressure: <xliff:g id="pressure">%1.0f</xliff:g> hpa</string>
    <string name="weather_condition">Weather Condition</string>

</resources>
